--- a/개인프로젝트ver2.5/index.html
+++ b/개인프로젝트ver2.5/index.html
@@ -76,7 +76,7 @@
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="./log인 화면/test.html">LOGIN</a>
-                      <a class="nav-link" href="./회원가입 화면/test_2.html">SIGH UP</a>
+                      <a class="nav-link" href="./회원가입 화면/test_2.html">SIGN UP</a>
                     </li>
                 </div>
               </div>
